name:                has-vis
version:             0.1.0
stability:           experimental
synopsis:            Visualisation of Haskell data
--description:
author:              Nicholas Smith
maintainer:          nmsmith65@gmail.com
category:            Visualisation
license:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >= 1.20
--data-files: TODO: Add data files

library
    exposed-modules:    GHC.HasVis
    --other-modules:
    default-language:   Haskell2010
    other-extensions:   CPP
    build-depends:      base >= 4.7 && < 5,
                        network >= 2.6,
                        websockets >= 0.9.2.2,
                        bytestring >= 0.10,
                        text >= 1.2.0.4,
                        ghc-heap-view == 0.5.*,
                        aeson >= 0.8.0.2,
                        containers >= 0.5.5,
                        unordered-containers >= 0.2.5.1,
                        scientific >= 0.3.3.7,
                        vector >= 0.10.9.1
    hs-source-dirs:     src/
    -- Configuration for the code to launch a web browser
    if os(windows)
        cpp-options: -DWINDOWS
        c-sources: windows-browser-launch.c
        extra-libraries: Shell32
    else
        build-depends: process >= 1.0 && < 1.3
        if os(darwin)
            cpp-options: -DMAC
